--- a/vim/rc/filetype.toml
+++ b/vim/rc/filetype.toml
@@ -32,6 +32,9 @@ json = '''
 vim = '''
   setlocal tabstop=2 softtabstop=2 shiftwidth=2
 '''
+pdf = '''
+  setlocal tabstop=2 softtabstop=2 shiftwidth=2
+'''
 help = '''
   setlocal nolist
   setlocal noexpandtab
