--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -38,16 +38,22 @@ lua_source = '''
   }
 
   local lsp_util = require('lspconfig.util')
+  local root_pattern = {
+      astro = lsp_util.root_pattern('astro.config.mjs'),
+      deno = lsp_util.root_pattern('deno.json', 'deno.jsonc', 'denops'),
+      node = lsp_util.root_pattern('package.json', 'node_modules')
+  }
+
   local lsp_config = {
     astro = {
-        root_dir = lsp_util.root_pattern('astro.config.mjs')
+        root_dir = root_pattern.astro
     },
     dartls = {
         root_dir = lsp_util.root_pattern('pubspec.yaml', '.dart')
     },
     denols = {
       init_options = { lint = true, unstable = true },
-      root_dir = lsp_util.root_pattern('deno.json', 'deno.jsonc', 'denops'),
+      root_dir = root_pattern.deno,
       single_file_support = false
     },
     omnisharp = {
@@ -84,9 +90,9 @@ lua_source = '''
     tsserver = {
       single_file_support = false,
       root_dir = function(fname)
-        local deno_root = lsp_util.root_pattern('deno.json', 'deno.jsonc', 'denops')(fname)
-        local astro_root = lsp_util.root_pattern('astro.config.mjs')(fname)
-        local node_root = lsp_util.root_pattern('package.json', 'node_modules')(fname)
+        local astro_root = root_pattern.astro(fname)
+        local deno_root = root_pattern.deno(fname)
+        local node_root = root_pattern.node(fname)
         if deno_root ~= nil or astro_root ~= nil then
             return nil
         end
