--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -68,6 +68,9 @@ hook_source = '''
   call ddc#custom#patch_filetype(['markdown'], #{
     \   sources: ['around', 'mocword']
     \ })
+  call ddc#custom#patch_filetype(['pdf'], #{
+    \   sources: ['vsnip', 'around']
+    \ })
 
   call ddc#custom#patch_filetype(['ddu-ff-filter'], #{
     \   specialBufferCompletion: v:false
