--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -17,13 +17,6 @@ hook_add = '''
   let g:denops_server_addr = '127.0.0.1:32123'
 '''
 
-# LuaCacheClear / LuaCacheLog / LuaCacheProfile
-# [[plugins]]
-# repo = 'lewis6991/impatient.nvim'
-# hook_add = '''
-#   lua require('impatient')
-# '''
-
 [[plugins]]
 repo = 'vim-jp/vimdoc-ja'
 hook_add = 'set helplang=ja,en'
@@ -59,3 +52,6 @@ hook_add = '''
     \ toml: ['^\s*#\s*'],
     \ }
 '''
+
+# [[plugins]]
+# repo = '~/Projects/VimPlugin/ffiler'
